--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -43,6 +43,17 @@
                             <td>{{user_department}}</td>
                             <td>{{user_email}}</td>
                             <td>{{user_name}}</td>
+                        </tr><br>
+                        <tr>
+                            <td>{{user_name}}</td>
+                            <td>{{user_id}}</td>
+                            <td>{{user_department}}</td>
+                            <td>{{user_email}}</td>
+                            <td>{{user_name}}</td>
+                            <td>{{user_id}}</td>
+                            <td>{{user_department}}</td>
+                            <td>{{user_email}}</td>
+                            <td>{{user_name}}</td>
                         </tr>
                     </tbody>
                 </table>
