--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -9,7 +9,7 @@
             <div class="big-frame">
                 <h2>Upload ExamFile</h2>
                 <div class="small-frame">
-                    <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
+                    <input type="file" id="uploadFile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
                 <button type="submit">Upload</button>
             </div>
