--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -1,63 +1,61 @@
-<!-- upload.html -->
 {% extends "mainPart/base.html" %}
-{% block title %}UploadExam{% endblock %}
+{% block title %}Upload Exam{% endblock %}
+
 {% block content %}
-    <!-- Row 1 First Fesatures to upload merge schedule files--> 
-    <div class="menu-grid">
+<div class="menu-grid">
 
-        <div class="menu-section">
-            <div class="big-frame">
-                <h2>Upload ExamFile</h2>
-                <div class="small-frame">
-                    <input type="file" id="uploadFile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
-                </div>
-                <button type="submit">Upload</button>
-            </div>
-        </div>
-
-        <div class="menu-section">
-            <h2>Table Record</h2>
-            <div class="user-table-container">
-                <table class="user-data-table">
-                    <thead>
-                        <tr>
-                            <th>Exam Date</th>
-                            <th>Exam Day</th>
-                            <th>Exam Start Time</th>
-                            <th>Exam End Time</th>
-                            <th>Course Code</th>
-                            <th>Section</th>
-                            <th>Lecturer Name</th>
-                            <th>No of Students</th>
-                            <th>Venue</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>{{user_name}}</td>
-                            <td>{{user_id}}</td>
-                            <td>{{user_department}}</td>
-                            <td>{{user_email}}</td>
-                            <td>{{user_name}}</td>
-                            <td>{{user_id}}</td>
-                            <td>{{user_department}}</td>
-                            <td>{{user_email}}</td>
-                            <td>{{user_name}}</td>
-                        </tr><br>
-                        <tr>
-                            <td>{{user_name}}</td>
-                            <td>{{user_id}}</td>
-                            <td>{{user_department}}</td>
-                            <td>{{user_email}}</td>
-                            <td>{{user_name}}</td>
-                            <td>{{user_id}}</td>
-                            <td>{{user_department}}</td>
-                            <td>{{user_email}}</td>
-                            <td>{{user_name}}</td>
-                        </tr>
-                    </tbody>
-                </table>
+    <div class="menu-section">
+        <div class="big-frame">
+            <h2>Upload Exam File</h2>
+            <div class="small-frame">
+                <form action="/home/uploadExamDetails" method="POST" enctype="multipart/form-data">
+                    <input type="file" name="master_file" accept=".xlsx,.xls,.xlsm" required>
+                    <button type="submit">Upload</button>
+                </form>
+                {% if error %}
+                    <p style="color: red;">{{ error }}</p>
+                {% endif %}
             </div>
         </div>
     </div>
+
+    {% if exam_data %}
+    <div class="menu-section">
+        <h2>Exam Table</h2>
+        <div class="user-table-container">
+            <table class="user-data-table">
+                <thead>
+                    <tr>
+                        <th>Exam Date</th>
+                        <th>Exam Day</th>
+                        <th>Start Time</th>
+                        <th>End Time</th>
+                        <th>Course Code</th>
+                        <th>Section</th>
+                        <th>Lecturer</th>
+                        <th>No. of Students</th>
+                        <th>Room</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for row in exam_data %}
+                    <tr>
+                        <td>{{ row['Date'] }}</td>
+                        <td>{{ row['Day'] }}</td>
+                        <td>{{ row['Start'] }}</td>
+                        <td>{{ row['End'] }}</td>
+                        <td>{{ row['Program'] }}</td>
+                        <td>{{ row['Course/Sec'] }}</td>
+                        <td>{{ row['Lecturer'] }}</td>
+                        <td>{{ row['No Of'] }}</td>
+                        <td>{{ row['Room'] }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    {% endif %}
+
+</div>
 {% endblock %}
