--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -2,61 +2,60 @@
 {% block title %}Upload Exam{% endblock %}
 
 {% block content %}
-<div class="menu-grid">
 
-    <div class="menu-section">
-        <div class="big-frame">
+  <div class="menu-grid">
+        <div class="menu-section">
+            <div class="big-frame">
             <h2>Upload Exam File</h2>
-            <div class="small-frame">
-                <form action="/home/uploadExamDetails" method="POST" enctype="multipart/form-data">
-                    <input type="file" name="master_file" accept=".xlsx,.xls,.xlsm" required>
-                    <button type="submit">Upload</button>
-                </form>
-                {% if error %}
-                    <p style="color: red;">{{ error }}</p>
-                {% endif %}
+                <div class="small-frame">
+                    <form id="uploadFile" method="POST" enctype="multipart/form-data">
+                        <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
+                        <button type="submit">Upload</button>
+                    </form> 
+                    <small class="form-text text-muted">
+                    Sheet names should start with: C (Certificate), CF (Foundation), D (Diploma), B (Degree). Others will be categorized as "Others".
+                </small>
+                </div>
             </div>
-        </div>
+
+            <div class="menu-section">
+                <h2>Table Record</h2>
+                <div class="user-table-container">
+                    <table class="user-data-table">
+                        <thead>
+                            <tr>
+                                <th>Exam Date</th>
+                                <th>Exam Day</th>
+                                <th>Start Time</th>
+                                <th>End Time</th>
+                                <th>Course Code</th>
+                                <th>Section</th>
+                                <th>Lecturer</th>
+                                <th>No. of Students</th>
+                                <th>Room</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% if exam_data %}
+                                {% for row in exam_data %}
+                                <tr>
+                                    <td>{{ row['Date'] }}</td>
+                                    <td>{{ row['Day'] }}</td>
+                                    <td>{{ row['Start'] }}</td>
+                                    <td>{{ row['End'] }}</td>
+                                    <td>{{ row['Program'] }}</td>
+                                    <td>{{ row['Course/Sec'] }}</td>
+                                    <td>{{ row['Lecturer'] }}</td>
+                                    <td>{{ row['No Of'] }}</td>
+                                    <td>{{ row['Room'] }}</td>
+                                </tr>
+                                {% endfor %}
+                            {% endif %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>  
     </div>
 
-    <div class="menu-section">
-        <h2>Exam Table</h2>
-        <div class="user-table-container">
-            <table class="user-data-table">
-                <thead>
-                    <tr>
-                        <th>Exam Date</th>
-                        <th>Exam Day</th>
-                        <th>Start Time</th>
-                        <th>End Time</th>
-                        <th>Course Code</th>
-                        <th>Section</th>
-                        <th>Lecturer</th>
-                        <th>No. of Students</th>
-                        <th>Room</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% if exam_data %}
-                        {% for row in exam_data %}
-                        <tr>
-                            <td>{{ row['Date'] }}</td>
-                            <td>{{ row['Day'] }}</td>
-                            <td>{{ row['Start'] }}</td>
-                            <td>{{ row['End'] }}</td>
-                            <td>{{ row['Program'] }}</td>
-                            <td>{{ row['Course/Sec'] }}</td>
-                            <td>{{ row['Lecturer'] }}</td>
-                            <td>{{ row['No Of'] }}</td>
-                            <td>{{ row['Room'] }}</td>
-                        </tr>
-                        {% endfor %}
-                    {% endif %}
-                </tbody>
-            </table>
-        </div>
-    </div>
-    
-
-</div>
 {% endblock %}
