--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -7,15 +7,15 @@
         <div class="menu-section">
             <div class="big-frame">
             <h2>Upload Exam File</h2>
-                <div class="small-frame">
-                    <form id="uploadFile" method="POST" enctype="multipart/form-data">
-                        <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
-                        <button type="submit">Upload</button>
-                    </form> 
-                    <small class="form-text text-muted">
+                <form class="small-frame" id="uploadFile" method="POST" enctype="multipart/form-data">
+                    <input type="file" id="masterfile" name="master_file" accept=".xlsx,.xls,.xlsm" required>
+                    <button type="submit">Upload</button>
+                </form> 
+                <br>
+                <small class="form-text text-muted">
                     Sheet names should start with: C (Certificate), CF (Foundation), D (Diploma), B (Degree). Others will be categorized as "Others".
                 </small>
-                </div>
+                
             </div>
 
             <div class="menu-section">
