--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -1,6 +1,8 @@
+<!-- upload.html -->
 {% extends "mainPart/base.html" %}
-{% block title %}Upload Exam{% endblock %}
+{% block title %}UploadExam{% endblock %}
 {% block content %}
+
 <div class="menu-grid">
 
     <div class="menu-section">
