--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -18,8 +18,9 @@
         <div class="big-frame">
             <h2>Upload Exam File</h2>
             <div class="small-frame">
-                <form method="POST" enctype="multipart/form-data">
-                    <input type="file" name="master_file">
+                <form action="/home/uploadExamDetails" method="POST" enctype="multipart/form-data">
+                    <input type="file" name="master_file" accept=".xlsx,.xls,.xlsm" required>
+                    <button type="submit">Upload</button>
                 </form>
             </div>
             <button type="submit">Upload</button>
