--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -19,7 +19,7 @@
             <h2>Upload Exam File</h2>
             <div class="small-frame">
                 <form action="/home/uploadExamDetails" method="POST" enctype="multipart/form-data">
-                    <input type="file" name="master_file" accept=".xlsx,.xls,.xlsm" required>
+                    <input type="file" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                 </form>
             </div>
             <button type="submit">Upload</button>
