--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -2,6 +2,7 @@
 {% block title %}Upload Exam{% endblock %}
 
 {% block content %}
+
 {% with messages = get_flashed_messages() %}
   {% if messages %}
     <ul class="flashes">
@@ -19,7 +20,7 @@
             <h2>Upload Exam File</h2>
             <div class="small-frame">
                  <form id="uploadExamDetails" method="POST" enctype="multipart/form-data">
-                    <input type="file" id="exam_file" accept=".xlsx,.xls,.xlsm" required>
+                    <input type="file" id="exam_file" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                 </form>
             </div>
             <button type="submit">Upload</button>
