--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -19,8 +19,8 @@
         <div class="big-frame">
             <h2>Upload Exam File</h2>
             <div class="small-frame">
-                <form id="uploadExamDetails" method="post" enctype="multipart/form-data">
-                    <input type="file" id="exam_file" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
+                <form id="uploadExamDetails" method="POST" enctype="multipart/form-data">
+                    <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                     <button type="submit">Upload</button>
                 </form>
             </div>
