--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -23,6 +23,7 @@
                     <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                     <button type="submit">Upload</button>
                 </form>
+                <script src="{{ url_for('static', filename='js/function.js') }}"></script>
             </div>
             
             <br>    
