--- a/app/templates/mainPart/generateSchedule.html
+++ b/app/templates/mainPart/generateSchedule.html
@@ -6,7 +6,7 @@
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <h2>Generate Exam Schedule</h2>
-            <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
+            <input type="file" accept=".xlsx,.xls" required>
             <li class="submenu">
                 <strong>  Functionality:</strong>
                 <ul>
