--- a/app/templates/mainPart/generateSchedule.html
+++ b/app/templates/mainPart/generateSchedule.html
@@ -6,7 +6,10 @@
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <h2>Generate Exam Schedule</h2>
-            <input type="file" accept=".xlsx,.xls" required>
+            <form id="uploadExamDetails" method="POST" enctype="multipart/form-data">
+                <input type="file" accept=".xlsx,.xls" required>
+                <button type="submit">Upload</button>
+            </form> 
             <li class="submenu">
                 <strong>  Functionality:</strong>
                 <ul>
