--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -16,6 +16,7 @@
 
 <div class="menu-grid">
     <div class="menu-section">
+    <!--
         <div class="big-frame">
             <h2>Upload Exam File</h2>
             <div class="small-frame">
@@ -24,6 +25,7 @@
                     <button type="submit">Upload</button>
                 </form>
                 <script src="{{ url_for('static', filename='js/function.js') }}"></script>
+                <div id="examLastUploadedLabel" style="margin-top: 10px;"></div>
             </div>
             
             <br>    
@@ -32,6 +34,16 @@
             </small>    
         </div>
     </div>  
+    -->
+    <h2>Upload Exa
+        m File</h2>
+    <form id="uploadForm" enctype="multipart/form-data">
+        <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
+        <button type="submit">Upload</button>
+    </form>
+    <div id="uploadResult" style="margin-top: 20px;"></div>
+
+    <script src="{{ url_for('static', filename='js/function.js') }}"></script>
 
 
 
