--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -85,7 +85,7 @@
 </div>
 
 <script>
-    Document.addEventListener('DOMContentLoaded', function () {
+    document.addEventListener('DOMContentLoaded', function () {
         const form = document.getElementById('uploadForm');
         form.addEventListener('submit', async function (e) {
             e.preventDefault();
