--- a/app/templates/mainPart/base.html
+++ b/app/templates/mainPart/base.html
@@ -17,24 +17,24 @@
     </div>
 </head>
 <body>
-    <form method="POST">
-        <!-- Main tab navigation -->
+    <!-- Main tab navigation -->
+    <div class="menu-grid">
         <div class="tab-nav">
             <a href="{{ url_for('homepage')}}" 
-               class="tab-link {% if active_tab == 'home' %}active{% endif %}" 
-               data-tab="home">Home</a>
+                class="tab-link {% if active_tab == 'home' %}active{% endif %}" 
+                data-tab="home">Home</a>
 
             <a href="{{ url_for('upload')}}" 
-               class="tab-link {% if active_tab == 'upload' %}active{% endif %}" 
-               data-tab="upload">Upload File</a>
+                class="tab-link {% if active_tab == 'upload' %}active{% endif %}" 
+                data-tab="upload">Upload File</a>
 
             <a href="{{ url_for('auto_generate')}}" 
-               class="tab-link {% if active_tab == 'autoGenerate' %}active{% endif %}" 
-               data-tab="autoGenerate">Generate Exam Schedule</a>
+                class="tab-link {% if active_tab == 'autoGenerate' %}active{% endif %}" 
+                data-tab="autoGenerate">Generate Exam Schedule</a>
 
             <a href="{{ url_for('manage_lecturer')}}" 
-               class="tab-link {% if active_tab == 'manage' %}active{% endif %}" 
-               data-tab="manage">Assign Lecturer</a>
+                class="tab-link {% if active_tab == 'manage' %}active{% endif %}" 
+                data-tab="manage">Assign Lecturer</a>
         </div>
         <br>
 
@@ -42,16 +42,16 @@
         {% if active_tab == 'upload' or active_tab == 'uploadLecturerTimetable' or active_tab == 'uploadExamDetails' %}
         <div class="tab-nav">
             <a href="{{ url_for('upload')}}" 
-               class="tab-link {% if active_tab == 'upload' %}active{% endif %}" 
-               data-tab="upload">Lecturers Timetable</a>
+                class="tab-link {% if active_tab == 'upload' %}active{% endif %}" 
+                data-tab="upload">Lecturers Timetable</a>
 
             <a href="{{ url_for('upload_lecturer_timetable')}}" 
-               class="tab-link {% if active_tab == 'uploadLecturerTimetable' %}active{% endif %}" 
-               data-tab="uploadLecturerTimetable">Lecturers Timetable</a>
+                class="tab-link {% if active_tab == 'uploadLecturerTimetable' %}active{% endif %}" 
+                data-tab="uploadLecturerTimetable">Lecturers Timetable</a>
 
             <a href="{{ url_for('upload_exam_details')}}" 
-               class="tab-link {% if active_tab == 'uploadExamDetails' %}active{% endif %}" 
-               data-tab="uploadExamDetails">Exam Details</a>
+                class="tab-link {% if active_tab == 'uploadExamDetails' %}active{% endif %}" 
+                data-tab="uploadExamDetails">Exam Details</a>
         </div>
         {% endif %}
 
@@ -60,6 +60,6 @@
 
         <!-- Shared JavaScript -->
         <script src="{{ url_for('static', filename='js/function.js') }}"></script>
-    </form>
+    </div>
 </body>
 </html>
