--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -100,6 +100,12 @@ form {
     text-decoration: none;
 }
 
+.tab-frame {
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 6px;
+    background-color: #f9f9f9;
+}
 
 
 
