--- a/app/templates/mainPart/base.html
+++ b/app/templates/mainPart/base.html
@@ -17,7 +17,7 @@
     </div>
 </head>
 <body>
-    <form>
+    <div class="tab-frame">
         <!-- Main tab navigation -->
         <div class="tab-nav">
             <a href="{{ url_for('homepage')}}" 
@@ -60,6 +60,6 @@
 
         <!-- Shared JavaScript -->
         <script src="{{ url_for('static', filename='js/function.js') }}"></script>
-    </form>
+    </div>
 </body>
 </html>
