--- a/app/templates/mainPart/upload.html
+++ b/app/templates/mainPart/upload.html
@@ -3,7 +3,7 @@
 {% block title %}Upload{% endblock %}
 {% block content %}
 
-    <div class="menu-grid">
+    <div class="menu-section">
 
     </div>
     
