--- a/app/templates/mainPart/homepage.html
+++ b/app/templates/mainPart/homepage.html
@@ -3,7 +3,7 @@
 {% block title %}Homepage{% endblock %}
 {% block content %}
     <br>
-    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr);">
+    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%;">
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <!--   <h2>Upload File</h2><br>  -->
