--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -19,7 +19,7 @@
         <div class="big-frame">
             <h2>Upload Exam File</h2>
             <form id="uploadForm" enctype="multipart/form-data">
-                <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
+                <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required><br>
                 <button type="submit">Upload</button>
             </form>
             <div id="uploadResult" style="margin-top: 20px;"></div>
