--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -20,7 +20,7 @@
             <h2>Upload Exam File</h2>
             <form id="uploadForm" enctype="multipart/form-data">
                 <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required><br>
-                <button type="submit">Upload</button>
+                <button type="submit" class="small-frame">Upload</button>
             </form>
             <div id="uploadResult" style="margin-top: 20px;"></div>
         </div>
