--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -14,10 +14,9 @@
 {% endwith %}
 
 
-
     <div class="menu-section">
         <div class="big-frame">
-            <h2>Upload Exam File</h2>
+            <h2>Upload Masterfile</h2>
             <form id="uploadForm" enctype="multipart/form-data">
                 <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required><br>
                 <button type="submit" class="small-frame">Upload</button>
