--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -16,17 +16,16 @@
 
     <div class="menu-section">
         <div class="big-frame">
-            <h2>Upload Masterfile</h2>
+            <h2>Upload Exam File</h2>
             <form id="uploadForm" enctype="multipart/form-data">
-                <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required><br>
-                <button type="submit" class="small-frame">Upload</button>
+                <div class="small-frame">
+                    <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required><br>
+                    <button type="submit" class="small-frame">Upload</button>
+                </div>
             </form>
             <div id="uploadResult" style="margin-top: 20px;"></div>
         </div>
-    </div>  
-
-
-    <div class="menu-section">
+    
         <h2>Table Record</h2>
         <div class="user-table-container">
             <table class="user-data-table">
