--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -17,13 +17,21 @@
     <div class="menu-section">
         <div class="big-frame">
             <h2>Upload Exam File</h2>
+
             <form id="uploadForm" enctype="multipart/form-data">
-                <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required><br>
-                <button type="submit">Upload</button>
+                <div class="form-wrapper">
+                    <div class="input-wrapper">
+                        <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
+                    </div>
+                    <div class="button-wrapper">
+                        <button type="submit">Upload</button>
+                    </div>
+                </div>
             </form>
+
             <div id="uploadResult" style="margin-top: 20px;"></div>
         </div>
-    
+
         <h2>Table Record</h2>
         <div class="user-table-container">
             <table class="user-data-table">
