--- a/app/templates/mainPart/uploadExamDetails.html
+++ b/app/templates/mainPart/uploadExamDetails.html
@@ -19,7 +19,7 @@
             <h2>Upload Exam File</h2>
 
             <div class="form-frame">
-                <form id="uploadForm" enctype="multipart/form-data">
+                <form id="uploadExamForm" enctype="multipart/form-data">
                     <div class="input-frame">
                         <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                     </div>
@@ -30,7 +30,7 @@
                 </form>
             </div>
 
-            <div id="uploadResult" style="margin-top: 20px;"></div>
+            <div id="examUploadResult" style="margin-top: 20px;"></div>
         </div>
 
 
