--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "mainPart/base.html" %}
+{% extends "adminPart/adminBase.html" %}
 {% block title %}UploadTimetable{% endblock %}
 {% block content %}
 
