--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -1,4 +1,4 @@
-{% extends "mainPart/base.html" %}
+{% extends "adminPart/adminBase.html" %}
 {% block title %}Upload Exam{% endblock %}
 
 {% block content %}
