--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "mainPart/base.html" %}
+{% extends "adminPart/adminBase.html" %}
 {% block title %}Homepage{% endblock %}
 {% block content %}
     <br>
