--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "mainPart/base.html" %}
+{% extends "adminPart/adminBase.html" %}
 {% block title %}Automation{% endblock %}
 {% block content %}
 
