--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -2,7 +2,7 @@
 {% extends "adminPart/adminBase.html" %}
 {% block title %}Homepage{% endblock %}
 {% block content %}
-    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%;">
+    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <!--   <h2>Upload File</h2><br>  -->
