--- a/app/templates/adminPart/adminLogin.html
+++ b/app/templates/adminPart/adminLogin.html
@@ -22,7 +22,7 @@
 
         <div class="heading"></div>
         <br>
-        <h1>Login Here</h1>
+        <h1>Login as Admin</h1>
         <br>
         
         <div class="form-container">
