--- a/app/templates/deanPart/deanHomepage.html
+++ b/app/templates/deanPart/deanHomepage.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
-{% extends "adminPart/adminBase.html" %}
-{% block title %}Homepage{% endblock %}
+{% extends "deanPart/deanBase.html" %}
+{% block title %}Dean Homepage{% endblock %}
 {% block content %}
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
