--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Homepage{% endblock %}
+{% block title %}Admin Homepage{% endblock %}
 {% block content %}
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
