--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Manage{% endblock %}
+{% block title %}Admin Manage{% endblock %}
 {% block content %}
 
     <!-- Row 1 First Fesatures to upload merge schedule files--> 
