--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "adminPart/adminBase.html" %}
-{% block title %}UploadTimetable{% endblock %}
+{% block title %}Admin UploadTimetable{% endblock %}
 {% block content %}
 
 
