--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -1,5 +1,5 @@
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Upload Exam{% endblock %}
+{% block title %}Admin UploadExam{% endblock %}
 
 {% block content %}
 
