--- a/app/templates/lecturerPart/lecturerRegister.html
+++ b/app/templates/lecturerPart/lecturerRegister.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Register_Page</title>
+    <title>Lecturer Register</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login_part.css') }}">
@@ -12,7 +12,7 @@
     <form method="POST">
         <div class="heading"></div>
         <br>
-        <h1>Register as New User</h1>
+        <h1>Register as New Lecturer</h1>
         <br>
         <div style="display: flex; flex-direction: row; justify-content: space-between;">
             <div class="form-left">
