--- a/app/templates/adminPart/adminUpload.html
+++ b/app/templates/adminPart/adminUpload.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Upload{% endblock %}
+{% block title %}Admin Upload{% endblock %}
 {% block content %}
 
     <div class="menu-section">
