--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Automation{% endblock %}
+{% block title %}Admin Automation{% endblock %}
 {% block content %}
 
 {% with messages = get_flashed_messages() %}
