--- a/app/templates/lecturerPart/lecturerBase.html
+++ b/app/templates/lecturerPart/lecturerBase.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Lecturer/Lecturer.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/lecturer/lecturerHome.css') }}">
     <!-- Shared header/navigation -->
     <div class= "header-container">
         <div class="heading"></div>
